--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,7 +5,6 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -57,9 +56,12 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
-p , input {
+
+p,
+input {
   font-family: "Lato", sans-serif;
   display: block;
+  background-color: none;
 }
 
 button {
@@ -81,19 +83,4 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-
-  a:hover {
-    color: #747bff;
-  }
-
-  button {
-    background-color: #f9f9f9;
-  }
 }
