--- a/Frontend/src/pages/register/Register.css
+++ b/Frontend/src/pages/register/Register.css
@@ -115,6 +115,13 @@ input {
   color: white;
 }
 
+.boxregister input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px #3b3b3b inset;
+  -webkit-text-fill-color: #fff;
+}
+
 .formFooter {
   display: flex;
   flex-direction: row;
